# auditory-intention-decoding

./: .gitignore  README.md  configuration.yaml  experiment_texts.yaml  pyproject.toml
.github/: plantuml.yml
.github/workflows/: plantuml.yml  poetry_pytest.yml
auditory_stimulation/: audio.py  configuration.py  experiment.py  experiment_texts.yaml  main.py  stimuli.yaml  stimulus.py
auditory_stimulation/auditory_stimulus/: assr_stimulus.py  auditory_stimulus.py  modulation_strategies.py  noise_tagging_stimulus.py  raw_stimulus.py  sound_players.py
auditory_stimulation/auditory_tagging/: assr_tagger.py  auditory_tagger.py  modulation_strategies.py  noise_tagging_tagger.py  raw_tagger.py  shift_sum_tagger.py  shift_tagger.py  tag_generators.py
auditory_stimulation/configurator/: configuration.py  configuration_loader.py  settings.py
auditory_stimulation/eeg/: FileTriggerSender.py  bittium_neur_one.py  common.py  file_trigger_sender.py  trigger_sender.py
auditory_stimulation/model/: experiment_state.py  logging.py  model.py  model_update_identifier.py  stimulus.py
auditory_stimulation/view/: cli_view.py  psychopy_view.py  sound_players.py  view.py
diagrams/: action.yml
diagrams/plantuml/: class_diagram.pu  class_full.puml  component.puml  general_overview.puml  test.pu
notebooks/: shift_test.ipynb  test_assr.ipynb  test_noise_tagging.ipynb  test_taggers.ipynb
stimuli_sounds/: intro-transcriptions.yaml
tests/: audio_test.py  configuraiton_test.py
tests/auditory_stimulus/: assr_stimulus_test.py  assr_stimulus_tests.py  noise_tagging_stimulus_test.py  (+7 more)
(+30 files in other folders)
