[tool.poetry]
name = "auditory-stimulation"
version = "0.1.0"
description = ""
authors = ["michalrzak <michal.r.zak@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.dev0"

PyQt5-Qt5="5.15.2"
psychopy = "^2023.2.3"
pytest = "^8.0.0"
mockito = "^1.4.0"
pygame = "^2.5.2"
pyaudio = "^0.2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
